[package]
name = "libhttp"
version = "0.1.0"
edition = "2021"
keywords = ["http", "server"]
description = "A simple http server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12"
log = "0.4"
chrono = "0.4"

[dev-dependencies]
simplelog = "0.12"